--- a/css/header.css
+++ b/css/header.css
@@ -8,24 +8,13 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 70px;
     padding-left: 20px;
     padding-right: 20px;
     border-bottom: 1px solid rgba(10, 32, 112, .2);
 }
-.top-navigation-menu ul li {
-    display: inline-block;
-    margin-left: 30px;
-}
 
-.top-navigation-menu ul li a{
-    text-decoration: none;
-    text-transform: uppercase;
+.header__top-navigation .list-itm-link{
     color: rgba(255, 255, 255, 0.8);
-    letter-spacing: 0.165em;
-    line-height: 1;
-    font-size: 11px;
-    font-weight: 700;
 }
 .top-navigation-menu ul li a:hover{
     color: white;
@@ -36,7 +25,7 @@ header{
 }
 
 .top-navigation-add-boutton{
-    background-color: #21c466;
+    background-color: var(--medium-sea-green);
     color: white;
 }
 .fa-plus{
@@ -47,7 +36,7 @@ header{
     height: 41px;
     border-radius: 50%;
     border: none;
-    background-color: #1795ec;
+    background-color: var(--dodger-blue);
     color: white;
     cursor: pointer;
     font-size: 14px;
@@ -86,6 +75,8 @@ input[type="search"]::-webkit-search-cancel-button{
     padding: 17px 20px;
     margin: 0;
     border: none;
-    background-color: #21c466;
+    background-color: var(--medium-sea-green);
     color: white;
 }
+
+
