--- a/css/footer.css
+++ b/css/footer.css
@@ -1,9 +1,17 @@
 footer{
     background-color: white;
     margin-top: 10%;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 .footer-menu .list-itm-link{
     color: var(--teal);
+}
+.footer-options-add-boutton{
+    background-color: var(--light-cyan);
+}
+.footer-options-add-boutton:hover{
+    background-color:  var(--off-white-mint-cream);
 }
 .footer-options ul li button a{
     text-decoration: none;
@@ -22,11 +30,11 @@ footer{
     font-size: 25px;
     color: var(--teal) !important;
 }
-.dropdown{
+.dropup{
     position: relative;
     display: inline-block;
 }
-.dropdown-btn{
+.dropdup-btn{
     background-color: var(--white);
     border: none;
 }
@@ -35,21 +43,22 @@ footer{
     display: none;
     position: absolute;
     background-color:  var(--white);
-    min-width: 150px;
-    bottom: 20px;
+    min-width: 200px;
+    bottom: 40px;
     z-index: 1;
     box-shadow: 3px 8px 45px -6px rgba(0,0,0,0.22);
 }
 .dropup-content a {
-    color: black;
+    color: var(--teal);
     padding: 12px 16px;
     text-decoration: none;
     display: block;
     font-size: 14px;
+    line-height: 1;
 }
     
-.dropup-content a:hover {background-color: #ccc}
-.dropdown:hover .dropup-content {
+.dropup-content a:hover {background-color: var(--off-white-blue)}
+.dropup:hover .dropup-content {
     display: block;
   }
   
