--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,19 @@
 :root{
     --white: #fff;
     --ligth-gray: #EBEEF1;
-    --dodger-blue: #1795ec;
+    --dodger-blue: #1795EE;
     --medium-sea-green: #21c466;
-    --teal: #747d87;
-    --persian-blue: #0c5bba;
-    --medium-cya: #a1a8b0;
-    --cadet-blue: #616f8d;
+    --pigment-green: #1DAE5B;
+    --off-white-mint-cream: #CAF1DA;
+    --light-cyan: #DEF6E8;
+    --teal: #747D87;
+    --persian-blue: #0C5BBA;
+    --navy-blue-teal: #1287D8;
+    --egyptian-blue: #09448A;
+    --medium-cya: #A1A8B0;
+    --cadet-blue: #616F8D;
+    --off-white-blue: #E3ECF8;
+    
 }
 @font-face{
     font-family: 'open sans regular';
@@ -29,6 +36,7 @@ body{
     font-family: 'open sans light';
     font-size: 11px;
     background-color: var(--ligth-gray);
+    letter-spacing: 0.165em;
 }
 i{
     font-style: normal;
@@ -45,7 +53,7 @@ i{
     font-size: 11px;
     font-weight: 700;
     line-height: 1.1;
-    letter-spacing: 0.165em;
+    
     cursor: pointer;
     margin-right: 0;
     border: none;
